--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <p>If I manage to finish the Wagon</p>
       <img src="https://media-exp1.licdn.com/dms/image/C5603AQG0VeVMiD9BEw/profile-displayphoto-shrink_800_800/0/1649411502243?e=1672876800&v=beta&t=yM-uiDWXjkZBFtNh9Xl5-lb4JV4HcT4pWwdzwtCeDR0" alt="marine profile picture" id="profile-pic">
       <p>Marketer before in the sport industry, I was bored so I quit.</p>
+      <a href="https://www.quiksilver.fr/" class="button">Discover where I was working before...</a>
+
     </div>
 
     <div class="card">
